--- a/helm/templates/ingress_service_nodeport.yaml
+++ b/helm/templates/ingress_service_nodeport.yaml
@@ -3,12 +3,13 @@ kind: Service
 apiVersion: v1
 metadata:
   name: flask
-  namespace: 5-example
+  namespace: danp-flask-app
 spec:
   type: NodePort
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 5000
+      targetPort: 5000
+      nodePort: 30080
   selector:
     app: flask
