--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+#"Desktop Services Store" is an invisible file on the macOS operating system that gets automatically created anytime you look into a folder with 'Finder'.
 .DS_Store
+
+#Docker image id file
+docker_image_id.txt
