--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,11 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    labels:
+      - "dependencies"
+      - "bot"
 
