--- a/.github/workflows/Use_PaaS.yml
+++ b/.github/workflows/Use_PaaS.yml
@@ -5,4 +5,7 @@ on: [push, pull_request]
 jobs:
     Run-PaaS-Steps:
         #This is the Platform as a Service pipeline workflow
-        uses: Daniel-Perrinez/PaaS/.github/workflows/PaaS.yml@main
+        uses: Daniel-Perrinez/PaaS/.github/workflows/PaaS.yml@main #https://github.com/Daniel-Perrinez/PaaS
+        env:
+            DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
