--- a/.github/workflows/Use_PaaS.yml
+++ b/.github/workflows/Use_PaaS.yml
@@ -6,6 +6,7 @@ jobs:
     Run-PaaS-Steps:
         #This is the Platform as a Service pipeline workflow
         uses: Daniel-Perrinez/PaaS/.github/workflows/PaaS.yml@main #https://github.com/Daniel-Perrinez/PaaS
-        secrets:
-            DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        secrets: inherit
+        # secrets:
+        #     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        #     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
