--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 #"Desktop Services Store" is an invisible file on the macOS operating system that gets automatically created anytime you look into a folder with 'Finder'.
 .DS_Store
 
-#Docker image id file
-docker_image_id.txt
+#Python
+.pytest_cache
+__pycache__/
+
+#Code coverage
+.coverage
+coverage.xml
