--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: flask
-          image: d1v3/flask_website:0.0.1.RELEASE
+          image: danielperrinez/flask_website:0.0.1.RELEASE
           ports:
             - containerPort: 5000
           imagePullPolicy: Always
